# rriv-firmware

./: .gitignore  .releaserc.json  CHANGELOG.md  README.md
.github/workflows/: build-binary.yaml  semantic-release.yaml
board/: Cargo.toml
board/.cargo/: config.toml
board/app/: Cargo.toml  build.rs  memory.x
board/app/src/: main.rs  prelude.rs
board/rriv_board/: Cargo.toml
board/rriv_board/src/: hardware_error.rs  lib.rs
board/rriv_board_0_4_2/: Cargo.toml
board/rriv_board_0_4_2/src/: lib.rs
scripts/: .gitignore  attach-release.sh  attach.sh  build-flash-release.sh  build-flash.sh  build.sh  delete-lock-files.sh  dfu-download.sh  elf-to-bin.sh  flash-latest.sh  flash.sh  probe-debug.sh
src/control_interface/: Cargo.toml
src/datalogger/: Cargo.toml
src/datalogger/src/: lib.rs  registry.rs
src/datalogger/src/datalogger/: commands.rs  error.rs  mod.rs  modes.rs  payloads.rs  settings.rs
src/datalogger/src/drivers/: adc_temperature.rs  aht20.rs  atlas_ec.rs  basic_evo.rs  battery_level.rs  ds18b20.rs  generic_analog.rs  groundwater_flow_sdi12.rs  k30_co2.rs  mcp9808.rs  mhz9041a.rs  mod.rs  mod.rs.orig  modbus.rs  ring_temperature.rs  ring_temperature_sim.rs  ring_w_mux.rs  ring_w_mux_sim.rs  rs485.rs  timed_switch_2.rs  types.rs
src/datalogger/src/drivers/resources/: gpio.rs
src/datalogger/src/protocol/: responses.rs  status.rs
src/datalogger/src/services/: command_service.rs  mod.rs  modbus_service.rs  sdi12_service.rs  usart_service.rs
src/datalogger/src/telemetry/codecs/: basic_codec.rs  naive_codec.rs
src/datalogger/src/telemetry/telemeters/: lorawan.rs  mod.rs  modbus.rs  rs485.rs  serial.rs
src/sdi12/: Cargo.toml
src/util/: Cargo.toml
(+20 files in other folders)
