[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-hal = "0.2.7"
nb = "1"
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
unwrap-infallible = "0.1.5"
rtt-target = { version = "0.6.1", features =  ["defmt"] }
embedded-alloc = "0.5.0"
defmt = "1.0.1"

rriv_board = { path = "../rriv_board"}
rriv_board_0_4_2 = { path = "../rriv_board_0_4_2"}
datalogger = { path = "../../src/datalogger" }

[dependencies.stm32f1xx-hal]
version = "0.10.0"
features = ["rt", "stm32f103", "high"]


[features]
default = ["storage-sdcard"]
storage-sdcard = ["rriv_board_0_4_2/storage-sdcard"] 
storage-disabled = ["rriv_board_0_4_2/storage-disabled"] 

