[package]
name = "datalogger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rriv_board = { path = "../../board/rriv_board" } 
control_interface = { path = "../../src/control_interface" }
util = { path = "../../src/util"}
hashbrown = { version="0.14", default-features=false }
serde_json = { version = "1.0.104", default-features = false, features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
rtt-target = { version = "0.6.1", features =  ["defmt"] }
bitfield-struct = "0.11.0"
one-wire-bus = "0.1.1"
modbus-core = { version = "*", default-features = false, features = ["rtu"] }
modbus_buffer = "0.0.2"
format_no_std = "1.2.0"
defmt = "1.0.1"
num-traits = { version = "0.2", default-features = false }

